@@ -145,6 +145,7 @@
 	  - default of sortloot changed to 'loot'
 	  - Allow exact numbers in STATUSCOLOR settings (from NAO)
 	  - Permanent hallucination conduct option: perma_hallu
+	  - Disable death drops conduct option: deathdropless
 	  - New options:
 	    - wound_message -- Healers can receive Crawl-style damage
 		messages indicating the current health of their foes
